# tvolib

./: .gitignore  Makefile  README.md  conda-lock.yml  environment.yml  mypy.ini  pyproject.toml
notebooks/: matplotlib_utils.ipynb
notebooks/.ipynb_checkpoints/: matplotlib_utils-checkpoint.ipynb
src/idl/mms/: tvo_mms_init.pro
src/idl/mms/load/: tvo_mms_load.pro
src/idl/mms/load/edp/: _process_edp_e.pro  _process_edp_flags.pro  tvo_mms_load_edp.pro
src/idl/mms/load/fgm/: _process_fgm_b.pro  _process_fgm_flags.pro  _process_fgm_r.pro  tvo_mms_load_fgm.pro
src/idl/mms/load/mec/: _load_mec_ancillary.pro  _load_mec_cotrans.pro  tvo_mms_load_mec.pro
src/idl/mms/names/: _add_custom_names.pro  _add_edp_names.pro  _add_feeps_names.pro  _add_fgm_names.pro  _add_fpi_names.pro  _add_mec_names.pro  fast_srvy_drates.pro  tvo_mms_names.pro
src/tvolib/: __init__.py  logging.py
src/tvolib/legacy/models/: magnetopause_model.py
src/tvolib/legacy/numeric/: __init__.py  curlometer.py  interpolate.py
src/tvolib/matplotlib_utils/: __init__.py  _draw.py  _format.py  _setup.py
src/tvolib/models/: __init__.py  lin10_magnetopause_model.py
src/tvolib/mpl/: _format.py  _setup.py
src/tvolib/mpl_utils/: __init__.py  _draw.py  _format.py  _setup.py
src/tvolib/mpl_utils/data/: mpl_utils.mplstyle
src/tvolib/numeric/: __init__.py  interpolate.py  moving.py  timing.py
