[tool.poetry]
name = "tvolib"
version = "0.5.2"
description = "A personal collection of Python and IDL tools for research in Space Plasma Physics"
authors = [
    "Tien Vo <tvo.work@proton.me>"
]
license = "GPL-3.0-only"
readme = "README.md"
packages = [
    { include = "tvolib", from = "src" }
]
repository = "https://github.com/tien-vo/tvolib"
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering :: Physics",
]

[tool.poetry.dependencies]
python = "^3.12"
scipy = "^1.13.0"
astropy = "^6.1.0"
matplotlib = "^3.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
