[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tvolib"
version = "0.5.3"
description = "A personal collection of Python and IDL tools for research in Space Plasma Physics"
authors = ["Tien Vo <tvo.work@proton.me>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [
    { include = "tvolib", from = "src" }
]
repository = "https://github.com/tien-vo/tvolib"
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering :: Physics",
]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "2.0.0"
scipy = "^1.13.0"
astropy = "^6.1.0"
matplotlib = "^3.9.0"
xarray = "^2024.5.0"
dask = "^2024.5.1"
zarr = "^2.18.2"
cdflib = "^1.3.1"
pathos = "^0.3.2"
tqdm = "^4.66.4"
colorcet = "^3.1.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
black = "^24.4.2"
isort = "^5.13.2"
pandas-stubs = "^2.2.2.240514"
types-requests = "^2.32.0.20240523"
tqdm-stubs = "^0.2.1"
types-tqdm = "^4.66.0.20240417"
jupyterlab = "^4.2.1"
jupyterlab-vim = "^4.1.3"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
